# mg_msgs

./: CMakeLists.txt  README.md  package.xml
action/: follow_PVAJS_trajectory.action  follow_PolyPVA_XY_trajectory.action
msg/: Almanac.msg  Attitude2D.msg  Attitude3D.msg  BalloonInfo.msg  BalloonStatus.msg  BaseTime.msg  Bitcontainer.msg  Coda.msg  Ephemeris.msg  GPStoUTC.msg  GameState.msg  GnssObservables.msg  GnssObservablesSegment.msg  Imu.msg  ImuConfig.msg  Info.msg  MultiBaselineRTKAttitude2D.msg  MultiBaselineRTKAttitude3D.msg  NavigationSolution.msg  ObservablesMeasurementTime.msg  PVA.msg  PVAJS_array.msg  PVAJ_request.msg  PVATrajectory.msg  PVAYStamped.msg  PVAYStampedTrajectory.msg  PVA_array.msg  PVA_request.msg  PingStatus.msg  PolyPVA.msg  Polynomial.msg  Radar.msg  RadarConfig.msg  RadarTarget.msg  SingleBaselineRTK.msg  Status.msg  TransmitterInfo.msg  TransmitterInfoSegment.msg  TriggerTime.msg  TxId.msg  (+1 more)
srv/: RequestRelativePoseBatch.srv  SetInteger.srv  SetQuadBool.srv  minAccWpPVA.srv  minAccXYWpPVA.srv  minSnapWpPVAJ.srv  minSnapWpStamped.srv  set_strings.srv
